@@ -7,6 +7,9 @@ Icon=gnome-home.png
 Terminal=0
 Type=Application
 Categories=Application;Core;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=nautilus
+X-GNOME-Bugzilla-Component=
 
 
 
