@@ -7,3 +7,6 @@ Exec=nautilus-server-connect
 Icon=nautilus/nautilus-server-connect.png
 Terminal=0
 Type=Application
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=nautilus
+X-GNOME-Bugzilla-Component=general
