@@ -1,4 +1,11 @@
-2002-12-02  Alexander Larsson  <alexl@redhat.com>
+2002-12-03  Alexander Larsson  <alexl@redhat.com>
+
+	* nautilus.desktop.in:
+	* src/nautilus-server-connect.desktop.in:
+	Add X-GNOME-Bugzilla lines.
+	Patch from Fernando Herrera <fherrera@onirica.com>
+
+2002-12-02  Alexander Larsson  <>
 
 	* libnautilus-private/nautilus-thumbnails.c (thumbnail_thread_starter_cb):
 	Allocate 128K thread stack. Patch from marcus@freebsd.org. (#99917)
